Closed
Bug 217439
Opened 22 years ago
Closed 22 years ago
Firebird offers to remember empty password
Categories
(Toolkit :: Password Manager, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.7.5
People
(Reporter: jruderman, Assigned: bryner)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
797 bytes,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Go to http://www.livejournal.com/users/jesserud/417.html?replyto=417
2. Click "Preview"
Result: Firebird asks if I want to save a password.
If I stay logged in to livejournal, livejournal selects the "Logged in user:
jesserud" radio button for me. (That option is hidden if you're not logged in.)
So even though I'm submitting a form with username and password fields, the
password field is not relevant when I submit the form. But the problem isn't
relevance detection; the problem is offering to save empty passwords, which is
useless.
| Reporter | ||
Comment 1•22 years ago
|
||
This bug was introduced between 08/11 and 08/13, probably with the "new password
manager" checkins. It's still present in 08/26.
| Reporter | ||
Updated•22 years ago
|
Keywords: regression
Updated•22 years ago
|
QA Contact: asa
Comment 3•22 years ago
|
||
Moving all active Password Manager bugs to Autocomplete component with
[pwd-mngr] in summary for querying. Sorry for the bugspam.
Component: General → Autocomplete
QA Contact: davidpjames
Summary: Firebird offers to remember empty password → [pwd-mngr] Firebird offers to remember empty password
Updated•22 years ago
|
Component: Autocomplete → Password Manager
| Reporter | ||
Comment 4•22 years ago
|
||
*** Bug 223085 has been marked as a duplicate of this bug. ***
Comment 5•22 years ago
|
||
Bug 223085 contained a test case for this issue:
http://bugzilla.mozilla.org/attachment.cgi?id=133759&action=view
Summary: [pwd-mngr] Firebird offers to remember empty password → Firebird offers to remember empty password
| Assignee | ||
Comment 6•22 years ago
|
||
| Assignee | ||
Comment 7•22 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•