Don't bother offering to remember a login with an empty username and password.  Bug 217439.